validate board moves, show errors, dark mode fixes

--- a/src/ui/assets/styles/game.scss
+++ b/src/ui/assets/styles/game.scss
@@ -98,6 +98,9 @@ html, body { height: 100% }
           width: 100%;
           height: 100%;
           background: #ccc;
+          html.dark & {
+            background: #333;
+          }
         }
       }
     }
@@ -273,6 +276,9 @@ html, body { height: 100% }
       padding: .25rem;
       font-size: .75rem;
       background: #fffc;
+      html.dark & {
+        background: #000c;
+      }
 
       &.fade-out {
         animation: fade-out-prompt .5s forwards;
@@ -297,6 +303,9 @@ html, body { height: 100% }
       }
       input[type=number] {
         width: 4em;
+      }
+      .error {
+        color: #c00;
       }
       button {
         border: none;
@@ -836,6 +845,7 @@ html, body { height: 100% }
     width: max-content;
     max-width: 80%;
     background: white;
+    color: #002;
     top: 4rem;
     left: 50%;
     transform: translateX(-50%);
@@ -848,6 +858,10 @@ html, body { height: 100% }
     h1, h2, h3, h4, h5, h6 {
       text-align: center;
       margin: .25em 0;
+    }
+
+    html.dark & {
+      background: #cccccf;
     }
   }
 
